# RS-aware-differential-SfM

./: .gitignore  README.md
examples/: .gitignore  README.md
matlab_synthetic_data/: README.md  calculate_camera_trajectory.m  castle.m  setup_renderer.m  start_generating.m  take_sequence.m  take_single_frame.m  take_video_frame.m
src/: CMakeLists.txt  camera.cc  camera.h  errorMeasure.cpp  errorMeasure.h  main.cc  minimal.cc  minimal.h  nonlinearRefinement.cc  nonlinearRefinement.h  rsframe.cc  rsframe.h  scanline.cc  scanline.h
